[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instaload"
version = "1.0.0"
description = "A module for downloading sets of Instagram profiles with instaloader"
readme = "README.md"
license = { text = "The code is provided for informational purposes only; any usage or modification is prohibited without the copyright holder's written permission." }
authors = [
  { name = "denyshon", email = "denyshon@outlook.com" }
]
dependencies = [
    "instaloader @ git+https://github.com/denyshon/instaloader.git@main",
    "browser-cookie3>=0.20"
]
requires-python = ">=3.9"

[project.scripts]
instaload = "instaload.instaload:main"

[tool.hatch.build.targets.wheel]
packages = ["src/instaload"]

[tool.hatch.metadata]
allow-direct-references = true
